ParE.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.8 from ParE.y
-----------------------------------------------------------------------------

state 22 contains 1 shift/reduce conflicts.
state 128 contains 1 shift/reduce conflicts.
state 129 contains 1 shift/reduce conflicts.

rule 9 is unused
rule 10 is unused
rule 18 is unused
rule 19 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Integer -> L_integ                                 (1)
	Double -> L_doubl                                  (2)
	Char -> L_charac                                   (3)
	String -> L_quoted                                 (4)
	PIdent -> L_PIdent                                 (5)
	Program -> ListDecl                                (6)
	ListDecl ->                                        (7)
	ListDecl -> ListDecl Decl                          (8)
	ListAnnotatedDecl ->                               (9)
	ListAnnotatedDecl -> ListAnnotatedDecl AnnotatedDecl   (10)
	Decl -> AnnotatedDecl                              (11)
	Decl -> 'def' LExpr '(' ListArg ')' Guard CompStmt   (12)
	Decl -> Stmt                                       (13)
	AnnotatedDecl -> '[' Type ':]' Decl                (14)
	ListArg ->                                         (15)
	ListArg -> Arg                                     (16)
	ListArg -> Arg ',' ListArg                         (17)
	ListStmt ->                                        (18)
	ListStmt -> ListStmt Stmt                          (19)
	Arg -> Modality PIdent Guard                       (20)
	Modality ->                                        (21)
	Modality -> 'var'                                  (22)
	Modality -> 'def'                                  (23)
	Guard ->                                           (24)
	Guard -> ':' Type                                  (25)
	Stmt -> Expr ';'                                   (26)
	Stmt -> 'var' LExpr Guard ';'                      (27)
	Stmt -> 'var' '[' LExpr ']' Guard ';'              (28)
	Stmt -> 'var' LExpr Guard ':=' Expr ';'            (29)
	Stmt -> 'def' LExpr Guard ':=' Expr ';'            (30)
	Stmt -> 'return' ListExpr ';'                      (31)
	Stmt -> CompStmt                                   (32)
	Stmt -> 'switch' '(' Expr ')' '{' ListNormCase ListDfltCase '}'   (33)
	Stmt -> 'break'                                    (34)
	Stmt -> 'continue'                                 (35)
	Stmt -> 'while' '(' Expr ')' CompStmt              (36)
	Stmt -> 'for' PIdent 'in' TypeIter CompStmt        (37)
	CompStmt -> '{' ListDecl '}'                       (38)
	NormCase -> 'match' Expr CompStmt                  (39)
	DfltCase -> 'match _' Stmt                         (40)
	ListNormCase ->                                    (41)
	ListNormCase -> ListNormCase NormCase              (42)
	ListDfltCase ->                                    (43)
	ListDfltCase -> ListDfltCase DfltCase              (44)
	Expr -> LExpr AssignOperator Expr1                 (45)
	Expr -> Expr1                                      (46)
	LExpr -> PIdent                                    (47)
	LExpr -> Ref                                       (48)
	Ref -> '*' LExpr                                   (49)
	Expr17 -> LExpr                                    (50)
	Expr17 -> '(' Expr ')'                             (51)
	Expr16 -> Integer                                  (52)
	Expr16 -> Double                                   (53)
	Expr16 -> Char                                     (54)
	Expr16 -> String                                   (55)
	Expr16 -> 'true'                                   (56)
	Expr16 -> 'false'                                  (57)
	Expr16 -> Expr17                                   (58)
	Expr15 -> PIdent '(' ListArg ')'                   (59)
	Expr15 -> Expr16                                   (60)
	Expr14 -> '!' Expr15                               (61)
	Expr14 -> '&' LExpr                                (62)
	Expr14 -> '-' Expr15                               (63)
	Expr14 -> '+' Expr15                               (64)
	Expr14 -> Expr15                                   (65)
	Expr13 -> Expr14 '**' Expr13                       (66)
	Expr13 -> Expr14                                   (67)
	Expr12 -> Expr12 '*' Expr13                        (68)
	Expr12 -> Expr12 '/' Expr13                        (69)
	Expr12 -> Expr12 '//' Expr13                       (70)
	Expr12 -> Expr12 '%' Expr13                        (71)
	Expr12 -> Expr12 '%%' Expr13                       (72)
	Expr12 -> Expr13                                   (73)
	Expr11 -> Expr11 '+' Expr12                        (74)
	Expr11 -> Expr11 '-' Expr12                        (75)
	Expr11 -> Expr12                                   (76)
	Expr10 -> Expr10 '..' Expr11                       (77)
	Expr10 -> Expr10 '..!' Expr11                      (78)
	Expr10 -> Expr11                                   (79)
	Expr9 -> Expr9 '<' Expr10                          (80)
	Expr9 -> Expr9 '>' Expr10                          (81)
	Expr9 -> Expr9 '<=' Expr10                         (82)
	Expr9 -> Expr9 '>=' Expr10                         (83)
	Expr9 -> Expr10                                    (84)
	Expr8 -> Expr8 '==' Expr9                          (85)
	Expr8 -> Expr8 '!=' Expr9                          (86)
	Expr8 -> Expr9                                     (87)
	Expr4 -> Expr4 '&&' Expr5                          (88)
	Expr4 -> Expr5                                     (89)
	Expr3 -> Expr3 '||' Expr4                          (90)
	Expr3 -> Expr4                                     (91)
	Expr1 -> Expr2                                     (92)
	Expr2 -> Expr3                                     (93)
	Expr5 -> Expr6                                     (94)
	Expr6 -> Expr7                                     (95)
	Expr7 -> Expr8                                     (96)
	ListExpr ->                                        (97)
	ListExpr -> Expr                                   (98)
	ListExpr -> Expr ',' ListExpr                      (99)
	AssignOperator -> ':='                             (100)
	AssignOperator -> '|='                             (101)
	AssignOperator -> '&='                             (102)
	AssignOperator -> '+='                             (103)
	AssignOperator -> '-='                             (104)
	AssignOperator -> '*='                             (105)
	AssignOperator -> '//='                            (106)
	AssignOperator -> '/='                             (107)
	AssignOperator -> '%='                             (108)
	AssignOperator -> '%%='                            (109)
	AssignOperator -> '**='                            (110)
	Type -> 'bool'                                     (111)
	Type -> 'double'                                   (112)
	Type -> 'int'                                      (113)
	Type -> 'void'                                     (114)
	Type -> 'char'                                     (115)
	Type -> 'string'                                   (116)
	Type -> CompoundType                               (117)
	CompoundType -> Type '*'                           (118)
	CompoundType -> TypeIter                           (119)
	TypeIter -> Expr10                                 (120)
	TypeIter -> '[' ListExpr ']'                       (121)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'%%'           { PT _ (TS _ 4) }
	'%%='          { PT _ (TS _ 5) }
	'%='           { PT _ (TS _ 6) }
	'&'            { PT _ (TS _ 7) }
	'&&'           { PT _ (TS _ 8) }
	'&='           { PT _ (TS _ 9) }
	'('            { PT _ (TS _ 10) }
	')'            { PT _ (TS _ 11) }
	'*'            { PT _ (TS _ 12) }
	'**'           { PT _ (TS _ 13) }
	'**='          { PT _ (TS _ 14) }
	'*='           { PT _ (TS _ 15) }
	'+'            { PT _ (TS _ 16) }
	'+='           { PT _ (TS _ 17) }
	','            { PT _ (TS _ 18) }
	'-'            { PT _ (TS _ 19) }
	'-='           { PT _ (TS _ 20) }
	'..'           { PT _ (TS _ 21) }
	'..!'          { PT _ (TS _ 22) }
	'/'            { PT _ (TS _ 23) }
	'//'           { PT _ (TS _ 24) }
	'//='          { PT _ (TS _ 25) }
	'/='           { PT _ (TS _ 26) }
	':'            { PT _ (TS _ 27) }
	':='           { PT _ (TS _ 28) }
	':]'           { PT _ (TS _ 29) }
	';'            { PT _ (TS _ 30) }
	'<'            { PT _ (TS _ 31) }
	'<='           { PT _ (TS _ 32) }
	'=='           { PT _ (TS _ 33) }
	'>'            { PT _ (TS _ 34) }
	'>='           { PT _ (TS _ 35) }
	'['            { PT _ (TS _ 36) }
	']'            { PT _ (TS _ 37) }
	'bool'         { PT _ (TS _ 38) }
	'break'        { PT _ (TS _ 39) }
	'char'         { PT _ (TS _ 40) }
	'continue'     { PT _ (TS _ 41) }
	'def'          { PT _ (TS _ 42) }
	'double'       { PT _ (TS _ 43) }
	'false'        { PT _ (TS _ 44) }
	'for'          { PT _ (TS _ 45) }
	'in'           { PT _ (TS _ 46) }
	'int'          { PT _ (TS _ 47) }
	'match'        { PT _ (TS _ 48) }
	'match _'      { PT _ (TS _ 49) }
	'return'       { PT _ (TS _ 50) }
	'string'       { PT _ (TS _ 51) }
	'switch'       { PT _ (TS _ 52) }
	'true'         { PT _ (TS _ 53) }
	'var'          { PT _ (TS _ 54) }
	'void'         { PT _ (TS _ 55) }
	'while'        { PT _ (TS _ 56) }
	'{'            { PT _ (TS _ 57) }
	'|='           { PT _ (TS _ 58) }
	'||'           { PT _ (TS _ 59) }
	'}'            { PT _ (TS _ 60) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_charac       { PT _ (TC $$) }
	L_quoted       { PT _ (TL $$) }
	L_PIdent       { PT _ (T_PIdent _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Integer         rule  1
	Double          rule  2
	Char            rule  3
	String          rule  4
	PIdent          rule  5
	Program         rule  6
	ListDecl        rules 7, 8
	ListAnnotatedDecl rules 9, 10
	Decl            rules 11, 12, 13
	AnnotatedDecl   rule  14
	ListArg         rules 15, 16, 17
	ListStmt        rules 18, 19
	Arg             rule  20
	Modality        rules 21, 22, 23
	Guard           rules 24, 25
	Stmt            rules 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37
	CompStmt        rule  38
	NormCase        rule  39
	DfltCase        rule  40
	ListNormCase    rules 41, 42
	ListDfltCase    rules 43, 44
	Expr            rules 45, 46
	LExpr           rules 47, 48
	Ref             rule  49
	Expr17          rules 50, 51
	Expr16          rules 52, 53, 54, 55, 56, 57, 58
	Expr15          rules 59, 60
	Expr14          rules 61, 62, 63, 64, 65
	Expr13          rules 66, 67
	Expr12          rules 68, 69, 70, 71, 72, 73
	Expr11          rules 74, 75, 76
	Expr10          rules 77, 78, 79
	Expr9           rules 80, 81, 82, 83, 84
	Expr8           rules 85, 86, 87
	Expr4           rules 88, 89
	Expr3           rules 90, 91
	Expr1           rule  92
	Expr2           rule  93
	Expr5           rule  94
	Expr6           rule  95
	Expr7           rule  96
	ListExpr        rules 97, 98, 99
	AssignOperator  rules 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110
	Type            rules 111, 112, 113, 114, 115, 116, 117
	CompoundType    rules 118, 119
	TypeIter        rules 120, 121

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'!'            reduce using rule 7
	'&'            reduce using rule 7
	'('            reduce using rule 7
	'*'            reduce using rule 7
	'+'            reduce using rule 7
	'-'            reduce using rule 7
	'['            reduce using rule 7
	'break'        reduce using rule 7
	'continue'     reduce using rule 7
	'def'          reduce using rule 7
	'false'        reduce using rule 7
	'for'          reduce using rule 7
	'return'       reduce using rule 7
	'switch'       reduce using rule 7
	'true'         reduce using rule 7
	'var'          reduce using rule 7
	'while'        reduce using rule 7
	'{'            reduce using rule 7
	L_integ        reduce using rule 7
	L_doubl        reduce using rule 7
	L_charac       reduce using rule 7
	L_quoted       reduce using rule 7
	L_PIdent       reduce using rule 7
	%eof           reduce using rule 7

	Program        goto state 3
	ListDecl       goto state 4

State 1


	L_integ        shift, and enter state 2


State 2

	Integer -> L_integ .                                (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'%%'           reduce using rule 1
	'&&'           reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'**'           reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'..'           reduce using rule 1
	'..!'          reduce using rule 1
	'/'            reduce using rule 1
	'//'           reduce using rule 1
	':='           reduce using rule 1
	':]'           reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	']'            reduce using rule 1
	'{'            reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 4

	Program -> ListDecl .                               (rule 6)
	ListDecl -> ListDecl . Decl                         (rule 8)

	'!'            shift, and enter state 34
	'&'            shift, and enter state 35
	'('            shift, and enter state 36
	'*'            shift, and enter state 37
	'+'            shift, and enter state 38
	'-'            shift, and enter state 39
	'['            shift, and enter state 40
	'break'        shift, and enter state 41
	'continue'     shift, and enter state 42
	'def'          shift, and enter state 43
	'false'        shift, and enter state 44
	'for'          shift, and enter state 45
	'return'       shift, and enter state 46
	'switch'       shift, and enter state 47
	'true'         shift, and enter state 48
	'var'          shift, and enter state 49
	'while'        shift, and enter state 50
	'{'            shift, and enter state 51
	L_integ        shift, and enter state 2
	L_doubl        shift, and enter state 52
	L_charac       shift, and enter state 53
	L_quoted       shift, and enter state 54
	L_PIdent       shift, and enter state 55
	%eof           reduce using rule 6

	Integer        goto state 5
	Double         goto state 6
	Char           goto state 7
	String         goto state 8
	PIdent         goto state 9
	Decl           goto state 10
	AnnotatedDecl  goto state 11
	Stmt           goto state 12
	CompStmt       goto state 13
	Expr           goto state 14
	LExpr          goto state 15
	Ref            goto state 16
	Expr17         goto state 17
	Expr16         goto state 18
	Expr15         goto state 19
	Expr14         goto state 20
	Expr13         goto state 21
	Expr12         goto state 22
	Expr11         goto state 23
	Expr10         goto state 24
	Expr9          goto state 25
	Expr8          goto state 26
	Expr4          goto state 27
	Expr3          goto state 28
	Expr1          goto state 29
	Expr2          goto state 30
	Expr5          goto state 31
	Expr6          goto state 32
	Expr7          goto state 33

State 5

	Expr16 -> Integer .                                 (rule 52)

	'!='           reduce using rule 52
	'%'            reduce using rule 52
	'%%'           reduce using rule 52
	'&&'           reduce using rule 52
	')'            reduce using rule 52
	'*'            reduce using rule 52
	'**'           reduce using rule 52
	'+'            reduce using rule 52
	','            reduce using rule 52
	'-'            reduce using rule 52
	'..'           reduce using rule 52
	'..!'          reduce using rule 52
	'/'            reduce using rule 52
	'//'           reduce using rule 52
	':='           reduce using rule 52
	':]'           reduce using rule 52
	';'            reduce using rule 52
	'<'            reduce using rule 52
	'<='           reduce using rule 52
	'=='           reduce using rule 52
	'>'            reduce using rule 52
	'>='           reduce using rule 52
	']'            reduce using rule 52
	'{'            reduce using rule 52
	'||'           reduce using rule 52


State 6

	Expr16 -> Double .                                  (rule 53)

	'!='           reduce using rule 53
	'%'            reduce using rule 53
	'%%'           reduce using rule 53
	'&&'           reduce using rule 53
	')'            reduce using rule 53
	'*'            reduce using rule 53
	'**'           reduce using rule 53
	'+'            reduce using rule 53
	','            reduce using rule 53
	'-'            reduce using rule 53
	'..'           reduce using rule 53
	'..!'          reduce using rule 53
	'/'            reduce using rule 53
	'//'           reduce using rule 53
	':='           reduce using rule 53
	':]'           reduce using rule 53
	';'            reduce using rule 53
	'<'            reduce using rule 53
	'<='           reduce using rule 53
	'=='           reduce using rule 53
	'>'            reduce using rule 53
	'>='           reduce using rule 53
	']'            reduce using rule 53
	'{'            reduce using rule 53
	'||'           reduce using rule 53


State 7

	Expr16 -> Char .                                    (rule 54)

	'!='           reduce using rule 54
	'%'            reduce using rule 54
	'%%'           reduce using rule 54
	'&&'           reduce using rule 54
	')'            reduce using rule 54
	'*'            reduce using rule 54
	'**'           reduce using rule 54
	'+'            reduce using rule 54
	','            reduce using rule 54
	'-'            reduce using rule 54
	'..'           reduce using rule 54
	'..!'          reduce using rule 54
	'/'            reduce using rule 54
	'//'           reduce using rule 54
	':='           reduce using rule 54
	':]'           reduce using rule 54
	';'            reduce using rule 54
	'<'            reduce using rule 54
	'<='           reduce using rule 54
	'=='           reduce using rule 54
	'>'            reduce using rule 54
	'>='           reduce using rule 54
	']'            reduce using rule 54
	'{'            reduce using rule 54
	'||'           reduce using rule 54


State 8

	Expr16 -> String .                                  (rule 55)

	'!='           reduce using rule 55
	'%'            reduce using rule 55
	'%%'           reduce using rule 55
	'&&'           reduce using rule 55
	')'            reduce using rule 55
	'*'            reduce using rule 55
	'**'           reduce using rule 55
	'+'            reduce using rule 55
	','            reduce using rule 55
	'-'            reduce using rule 55
	'..'           reduce using rule 55
	'..!'          reduce using rule 55
	'/'            reduce using rule 55
	'//'           reduce using rule 55
	':='           reduce using rule 55
	':]'           reduce using rule 55
	';'            reduce using rule 55
	'<'            reduce using rule 55
	'<='           reduce using rule 55
	'=='           reduce using rule 55
	'>'            reduce using rule 55
	'>='           reduce using rule 55
	']'            reduce using rule 55
	'{'            reduce using rule 55
	'||'           reduce using rule 55


State 9

	LExpr -> PIdent .                                   (rule 47)
	Expr15 -> PIdent . '(' ListArg ')'                  (rule 59)

	'!='           reduce using rule 47
	'%'            reduce using rule 47
	'%%'           reduce using rule 47
	'%%='          reduce using rule 47
	'%='           reduce using rule 47
	'&&'           reduce using rule 47
	'&='           reduce using rule 47
	'('            shift, and enter state 115
	')'            reduce using rule 47
	'*'            reduce using rule 47
	'**'           reduce using rule 47
	'**='          reduce using rule 47
	'*='           reduce using rule 47
	'+'            reduce using rule 47
	'+='           reduce using rule 47
	','            reduce using rule 47
	'-'            reduce using rule 47
	'-='           reduce using rule 47
	'..'           reduce using rule 47
	'..!'          reduce using rule 47
	'/'            reduce using rule 47
	'//'           reduce using rule 47
	'//='          reduce using rule 47
	'/='           reduce using rule 47
	':='           reduce using rule 47
	':]'           reduce using rule 47
	';'            reduce using rule 47
	'<'            reduce using rule 47
	'<='           reduce using rule 47
	'=='           reduce using rule 47
	'>'            reduce using rule 47
	'>='           reduce using rule 47
	']'            reduce using rule 47
	'{'            reduce using rule 47
	'|='           reduce using rule 47
	'||'           reduce using rule 47


State 10

	ListDecl -> ListDecl Decl .                         (rule 8)

	'!'            reduce using rule 8
	'&'            reduce using rule 8
	'('            reduce using rule 8
	'*'            reduce using rule 8
	'+'            reduce using rule 8
	'-'            reduce using rule 8
	'['            reduce using rule 8
	'break'        reduce using rule 8
	'continue'     reduce using rule 8
	'def'          reduce using rule 8
	'false'        reduce using rule 8
	'for'          reduce using rule 8
	'return'       reduce using rule 8
	'switch'       reduce using rule 8
	'true'         reduce using rule 8
	'var'          reduce using rule 8
	'while'        reduce using rule 8
	'{'            reduce using rule 8
	'}'            reduce using rule 8
	L_integ        reduce using rule 8
	L_doubl        reduce using rule 8
	L_charac       reduce using rule 8
	L_quoted       reduce using rule 8
	L_PIdent       reduce using rule 8
	%eof           reduce using rule 8


State 11

	Decl -> AnnotatedDecl .                             (rule 11)

	'!'            reduce using rule 11
	'&'            reduce using rule 11
	'('            reduce using rule 11
	'*'            reduce using rule 11
	'+'            reduce using rule 11
	'-'            reduce using rule 11
	'['            reduce using rule 11
	'break'        reduce using rule 11
	'continue'     reduce using rule 11
	'def'          reduce using rule 11
	'false'        reduce using rule 11
	'for'          reduce using rule 11
	'return'       reduce using rule 11
	'switch'       reduce using rule 11
	'true'         reduce using rule 11
	'var'          reduce using rule 11
	'while'        reduce using rule 11
	'{'            reduce using rule 11
	'}'            reduce using rule 11
	L_integ        reduce using rule 11
	L_doubl        reduce using rule 11
	L_charac       reduce using rule 11
	L_quoted       reduce using rule 11
	L_PIdent       reduce using rule 11
	%eof           reduce using rule 11


State 12

	Decl -> Stmt .                                      (rule 13)

	'!'            reduce using rule 13
	'&'            reduce using rule 13
	'('            reduce using rule 13
	'*'            reduce using rule 13
	'+'            reduce using rule 13
	'-'            reduce using rule 13
	'['            reduce using rule 13
	'break'        reduce using rule 13
	'continue'     reduce using rule 13
	'def'          reduce using rule 13
	'false'        reduce using rule 13
	'for'          reduce using rule 13
	'return'       reduce using rule 13
	'switch'       reduce using rule 13
	'true'         reduce using rule 13
	'var'          reduce using rule 13
	'while'        reduce using rule 13
	'{'            reduce using rule 13
	'}'            reduce using rule 13
	L_integ        reduce using rule 13
	L_doubl        reduce using rule 13
	L_charac       reduce using rule 13
	L_quoted       reduce using rule 13
	L_PIdent       reduce using rule 13
	%eof           reduce using rule 13


State 13

	Stmt -> CompStmt .                                  (rule 32)

	'!'            reduce using rule 32
	'&'            reduce using rule 32
	'('            reduce using rule 32
	'*'            reduce using rule 32
	'+'            reduce using rule 32
	'-'            reduce using rule 32
	'['            reduce using rule 32
	'break'        reduce using rule 32
	'continue'     reduce using rule 32
	'def'          reduce using rule 32
	'false'        reduce using rule 32
	'for'          reduce using rule 32
	'match _'      reduce using rule 32
	'return'       reduce using rule 32
	'switch'       reduce using rule 32
	'true'         reduce using rule 32
	'var'          reduce using rule 32
	'while'        reduce using rule 32
	'{'            reduce using rule 32
	'}'            reduce using rule 32
	L_integ        reduce using rule 32
	L_doubl        reduce using rule 32
	L_charac       reduce using rule 32
	L_quoted       reduce using rule 32
	L_PIdent       reduce using rule 32
	%eof           reduce using rule 32


State 14

	Stmt -> Expr . ';'                                  (rule 26)

	';'            shift, and enter state 114


State 15

	Expr -> LExpr . AssignOperator Expr1                (rule 45)
	Expr17 -> LExpr .                                   (rule 50)

	'!='           reduce using rule 50
	'%'            reduce using rule 50
	'%%'           reduce using rule 50
	'%%='          shift, and enter state 103
	'%='           shift, and enter state 104
	'&&'           reduce using rule 50
	'&='           shift, and enter state 105
	')'            reduce using rule 50
	'*'            reduce using rule 50
	'**'           reduce using rule 50
	'**='          shift, and enter state 106
	'*='           shift, and enter state 107
	'+'            reduce using rule 50
	'+='           shift, and enter state 108
	','            reduce using rule 50
	'-'            reduce using rule 50
	'-='           shift, and enter state 109
	'..'           reduce using rule 50
	'..!'          reduce using rule 50
	'/'            reduce using rule 50
	'//'           reduce using rule 50
	'//='          shift, and enter state 110
	'/='           shift, and enter state 111
	':='           shift, and enter state 112
	';'            reduce using rule 50
	'<'            reduce using rule 50
	'<='           reduce using rule 50
	'=='           reduce using rule 50
	'>'            reduce using rule 50
	'>='           reduce using rule 50
	']'            reduce using rule 50
	'{'            reduce using rule 50
	'|='           shift, and enter state 113
	'||'           reduce using rule 50

	AssignOperator goto state 102

State 16

	LExpr -> Ref .                                      (rule 48)

	'!='           reduce using rule 48
	'%'            reduce using rule 48
	'%%'           reduce using rule 48
	'%%='          reduce using rule 48
	'%='           reduce using rule 48
	'&&'           reduce using rule 48
	'&='           reduce using rule 48
	'('            reduce using rule 48
	')'            reduce using rule 48
	'*'            reduce using rule 48
	'**'           reduce using rule 48
	'**='          reduce using rule 48
	'*='           reduce using rule 48
	'+'            reduce using rule 48
	'+='           reduce using rule 48
	','            reduce using rule 48
	'-'            reduce using rule 48
	'-='           reduce using rule 48
	'..'           reduce using rule 48
	'..!'          reduce using rule 48
	'/'            reduce using rule 48
	'//'           reduce using rule 48
	'//='          reduce using rule 48
	'/='           reduce using rule 48
	':'            reduce using rule 48
	':='           reduce using rule 48
	':]'           reduce using rule 48
	';'            reduce using rule 48
	'<'            reduce using rule 48
	'<='           reduce using rule 48
	'=='           reduce using rule 48
	'>'            reduce using rule 48
	'>='           reduce using rule 48
	']'            reduce using rule 48
	'{'            reduce using rule 48
	'|='           reduce using rule 48
	'||'           reduce using rule 48


State 17

	Expr16 -> Expr17 .                                  (rule 58)

	'!='           reduce using rule 58
	'%'            reduce using rule 58
	'%%'           reduce using rule 58
	'&&'           reduce using rule 58
	')'            reduce using rule 58
	'*'            reduce using rule 58
	'**'           reduce using rule 58
	'+'            reduce using rule 58
	','            reduce using rule 58
	'-'            reduce using rule 58
	'..'           reduce using rule 58
	'..!'          reduce using rule 58
	'/'            reduce using rule 58
	'//'           reduce using rule 58
	':='           reduce using rule 58
	':]'           reduce using rule 58
	';'            reduce using rule 58
	'<'            reduce using rule 58
	'<='           reduce using rule 58
	'=='           reduce using rule 58
	'>'            reduce using rule 58
	'>='           reduce using rule 58
	']'            reduce using rule 58
	'{'            reduce using rule 58
	'||'           reduce using rule 58


State 18

	Expr15 -> Expr16 .                                  (rule 60)

	'!='           reduce using rule 60
	'%'            reduce using rule 60
	'%%'           reduce using rule 60
	'&&'           reduce using rule 60
	')'            reduce using rule 60
	'*'            reduce using rule 60
	'**'           reduce using rule 60
	'+'            reduce using rule 60
	','            reduce using rule 60
	'-'            reduce using rule 60
	'..'           reduce using rule 60
	'..!'          reduce using rule 60
	'/'            reduce using rule 60
	'//'           reduce using rule 60
	':='           reduce using rule 60
	':]'           reduce using rule 60
	';'            reduce using rule 60
	'<'            reduce using rule 60
	'<='           reduce using rule 60
	'=='           reduce using rule 60
	'>'            reduce using rule 60
	'>='           reduce using rule 60
	']'            reduce using rule 60
	'{'            reduce using rule 60
	'||'           reduce using rule 60


State 19

	Expr14 -> Expr15 .                                  (rule 65)

	'!='           reduce using rule 65
	'%'            reduce using rule 65
	'%%'           reduce using rule 65
	'&&'           reduce using rule 65
	')'            reduce using rule 65
	'*'            reduce using rule 65
	'**'           reduce using rule 65
	'+'            reduce using rule 65
	','            reduce using rule 65
	'-'            reduce using rule 65
	'..'           reduce using rule 65
	'..!'          reduce using rule 65
	'/'            reduce using rule 65
	'//'           reduce using rule 65
	':='           reduce using rule 65
	':]'           reduce using rule 65
	';'            reduce using rule 65
	'<'            reduce using rule 65
	'<='           reduce using rule 65
	'=='           reduce using rule 65
	'>'            reduce using rule 65
	'>='           reduce using rule 65
	']'            reduce using rule 65
	'{'            reduce using rule 65
	'||'           reduce using rule 65


State 20

	Expr13 -> Expr14 . '**' Expr13                      (rule 66)
	Expr13 -> Expr14 .                                  (rule 67)

	'!='           reduce using rule 67
	'%'            reduce using rule 67
	'%%'           reduce using rule 67
	'&&'           reduce using rule 67
	')'            reduce using rule 67
	'*'            reduce using rule 67
	'**'           shift, and enter state 101
	'+'            reduce using rule 67
	','            reduce using rule 67
	'-'            reduce using rule 67
	'..'           reduce using rule 67
	'..!'          reduce using rule 67
	'/'            reduce using rule 67
	'//'           reduce using rule 67
	':='           reduce using rule 67
	':]'           reduce using rule 67
	';'            reduce using rule 67
	'<'            reduce using rule 67
	'<='           reduce using rule 67
	'=='           reduce using rule 67
	'>'            reduce using rule 67
	'>='           reduce using rule 67
	']'            reduce using rule 67
	'{'            reduce using rule 67
	'||'           reduce using rule 67


State 21

	Expr12 -> Expr13 .                                  (rule 73)

	'!='           reduce using rule 73
	'%'            reduce using rule 73
	'%%'           reduce using rule 73
	'&&'           reduce using rule 73
	')'            reduce using rule 73
	'*'            reduce using rule 73
	'+'            reduce using rule 73
	','            reduce using rule 73
	'-'            reduce using rule 73
	'..'           reduce using rule 73
	'..!'          reduce using rule 73
	'/'            reduce using rule 73
	'//'           reduce using rule 73
	':='           reduce using rule 73
	':]'           reduce using rule 73
	';'            reduce using rule 73
	'<'            reduce using rule 73
	'<='           reduce using rule 73
	'=='           reduce using rule 73
	'>'            reduce using rule 73
	'>='           reduce using rule 73
	']'            reduce using rule 73
	'{'            reduce using rule 73
	'||'           reduce using rule 73


State 22

	Expr12 -> Expr12 . '*' Expr13                       (rule 68)
	Expr12 -> Expr12 . '/' Expr13                       (rule 69)
	Expr12 -> Expr12 . '//' Expr13                      (rule 70)
	Expr12 -> Expr12 . '%' Expr13                       (rule 71)
	Expr12 -> Expr12 . '%%' Expr13                      (rule 72)
	Expr11 -> Expr12 .                                  (rule 76)

	'!='           reduce using rule 76
	'%'            shift, and enter state 96
	'%%'           shift, and enter state 97
	'&&'           reduce using rule 76
	')'            reduce using rule 76
	'*'            shift, and enter state 98
			(reduce using rule 76)

	'+'            reduce using rule 76
	','            reduce using rule 76
	'-'            reduce using rule 76
	'..'           reduce using rule 76
	'..!'          reduce using rule 76
	'/'            shift, and enter state 99
	'//'           shift, and enter state 100
	':='           reduce using rule 76
	':]'           reduce using rule 76
	';'            reduce using rule 76
	'<'            reduce using rule 76
	'<='           reduce using rule 76
	'=='           reduce using rule 76
	'>'            reduce using rule 76
	'>='           reduce using rule 76
	']'            reduce using rule 76
	'{'            reduce using rule 76
	'||'           reduce using rule 76


State 23

	Expr11 -> Expr11 . '+' Expr12                       (rule 74)
	Expr11 -> Expr11 . '-' Expr12                       (rule 75)
	Expr10 -> Expr11 .                                  (rule 79)

	'!='           reduce using rule 79
	'&&'           reduce using rule 79
	')'            reduce using rule 79
	'*'            reduce using rule 79
	'+'            shift, and enter state 94
	','            reduce using rule 79
	'-'            shift, and enter state 95
	'..'           reduce using rule 79
	'..!'          reduce using rule 79
	':='           reduce using rule 79
	':]'           reduce using rule 79
	';'            reduce using rule 79
	'<'            reduce using rule 79
	'<='           reduce using rule 79
	'=='           reduce using rule 79
	'>'            reduce using rule 79
	'>='           reduce using rule 79
	']'            reduce using rule 79
	'{'            reduce using rule 79
	'||'           reduce using rule 79


State 24

	Expr10 -> Expr10 . '..' Expr11                      (rule 77)
	Expr10 -> Expr10 . '..!' Expr11                     (rule 78)
	Expr9 -> Expr10 .                                   (rule 84)

	'!='           reduce using rule 84
	'&&'           reduce using rule 84
	')'            reduce using rule 84
	','            reduce using rule 84
	'..'           shift, and enter state 92
	'..!'          shift, and enter state 93
	';'            reduce using rule 84
	'<'            reduce using rule 84
	'<='           reduce using rule 84
	'=='           reduce using rule 84
	'>'            reduce using rule 84
	'>='           reduce using rule 84
	']'            reduce using rule 84
	'{'            reduce using rule 84
	'||'           reduce using rule 84


State 25

	Expr9 -> Expr9 . '<' Expr10                         (rule 80)
	Expr9 -> Expr9 . '>' Expr10                         (rule 81)
	Expr9 -> Expr9 . '<=' Expr10                        (rule 82)
	Expr9 -> Expr9 . '>=' Expr10                        (rule 83)
	Expr8 -> Expr9 .                                    (rule 87)

	'!='           reduce using rule 87
	'&&'           reduce using rule 87
	')'            reduce using rule 87
	','            reduce using rule 87
	';'            reduce using rule 87
	'<'            shift, and enter state 88
	'<='           shift, and enter state 89
	'=='           reduce using rule 87
	'>'            shift, and enter state 90
	'>='           shift, and enter state 91
	']'            reduce using rule 87
	'{'            reduce using rule 87
	'||'           reduce using rule 87


State 26

	Expr8 -> Expr8 . '==' Expr9                         (rule 85)
	Expr8 -> Expr8 . '!=' Expr9                         (rule 86)
	Expr7 -> Expr8 .                                    (rule 96)
